# forecastCV

./: README.md  config.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: android_build.yml
src/: __init__.py  forecast_engine.py  main.py  styles.py  vision_engine.py
